--- a/src/app/components/definicion-plantillas/definicion-plantillas.component.html
+++ b/src/app/components/definicion-plantillas/definicion-plantillas.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>{{ "Listado de formularios" }}</mat-card-title>
+        <mat-card-title>{{ "definicion_formularios.titulo_visualizador" | translate }}</mat-card-title>
     </mat-card-header>
 
     <mat-card-content>
@@ -12,33 +12,35 @@
             </ng-container>
 
             <ng-container matColumnDef="proceso">
-                <th mat-header-cell *matHeaderCellDef>Proceso</th>
+                <th mat-header-cell *matHeaderCellDef>{{ "definicion_formularios.sub_titulo_proceso" | translate }}</th>
                 <td mat-cell *matCellDef="let form">
-                    <!-- Menú desplegable para seleccionar proceso -->
                     <mat-form-field appearance="fill" class="form-field">
                         <mat-select [(value)]="form.proceso" (selectionChange)="cambiarProceso(form)">
-                            <mat-option value="heteroevaluacion">Heteroevaluación</mat-option>
-                            <mat-option value="coevaluacion">Coevaluación</mat-option>
-                            <mat-option value="coevaluacion_II">Coevaluación II</mat-option>
-                            <mat-option value="autoevaluacion_I">Autoevaluación I</mat-option>
-                            <mat-option value="autoevaluacion_II">Autoevaluación II</mat-option>
+                            <mat-option value="heteroevaluacion">{{ "heteroevaluacion.titulo" | translate
+                                }}</mat-option>
+                            <mat-option value="coevaluacion">{{ "coevaluacion_i.titulo" | translate }}</mat-option>
+                            <mat-option value="coevaluacion_II">{{ "coevaluacion_ii.titulo" | translate }}</mat-option>
+                            <mat-option value="autoevaluacion_I">{{ "autoevaluacion_i.titulo" | translate
+                                }}</mat-option>
+                            <mat-option value="autoevaluacion_II">{{ "autoevaluacion_ii.titulo" | translate
+                                }}</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="fecha">
-                <th mat-header-cell *matHeaderCellDef>Fecha de creación / edición</th>
+                <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.estado" | translate }}</th>
                 <td mat-cell *matCellDef="let form">{{ form.fecha | date }}</td>
             </ng-container>
 
             <ng-container matColumnDef="estado">
-                <th mat-header-cell *matHeaderCellDef>Estado</th>
+                <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.estado" | translate }}</th>
                 <td mat-cell *matCellDef="let form">{{ form.estado }}</td>
             </ng-container>
 
             <ng-container matColumnDef="ponderacion">
-                <th mat-header-cell *matHeaderCellDef>Ponderación global</th>
+                <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.PONDERACION" | translate }}</th>
                 <td mat-cell *matCellDef="let form">{{ form.ponderacion }}%</td>
             </ng-container>
 
@@ -65,34 +67,32 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
 
-        <!-- Sección de formulario editable y texto orientativo -->
         <div *ngIf="mostrandoVistaComponente">
             <mat-card>
                 <mat-card-header>
-                    <!-- Título dinámico basado en la opción seleccionada del menú desplegable -->
-                    <mat-card-title>{{ 'Formulario ' + formularioSeleccionado | titlecase }}</mat-card-title>
+                    <mat-card-title>{{ "GLOBAL.FORMULARIO" | translate }} {{ formularioSeleccionado | titlecase
+                        }}</mat-card-title>
                 </mat-card-header>
 
                 <mat-card-content>
                     <div class="form-container">
-                        <!-- Input para agregar el título de la sección -->
                         <mat-form-field appearance="fill">
-                            <input matInput placeholder="Título de sección" [(ngModel)]="tituloSeccion">
+                            <input matInput placeholder="{{ 'titulo de sección' | translate }}"
+                                [(ngModel)]="tituloSeccion">
                         </mat-form-field>
 
-                        <!-- Botón para agregar la sección -->
                         <button mat-icon-button class="add-btn" (click)="agregarSeccion()">
                             <mat-icon>add</mat-icon>
                         </button>
                     </div>
 
-                    <!-- Tablas dinámicas para secciones -->
+                    <!-- Tabla dinámica para secciones -->
                     <div *ngFor="let seccion of secciones; let i = index">
                         <mat-card>
                             <mat-card-header>
-                                <mat-card-title>{{ seccion.titulo }}</mat-card-title>
+                                <mat-card-title>Sección: {{ seccion.titulo }}</mat-card-title>
                                 <button mat-icon-button (click)="eliminarSeccion(i)">
-                                    <mat-icon>remove</mat-icon>
+                                    <mat-icon>delete</mat-icon>
                                 </button>
                             </mat-card-header>
 
@@ -104,26 +104,24 @@
                                     </ng-container>
 
                                     <ng-container matColumnDef="nombre">
-                                        <th mat-header-cell *matHeaderCellDef>Componente</th>
+                                        <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.LISTA" | translate }}</th>
                                         <td mat-cell *matCellDef="let compo">{{ compo.nombre }}</td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="ponderacion">
-                                        <th mat-header-cell *matHeaderCellDef>Ponderación (%)</th>
+                                        <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.PONDERACION" | translate }}
+                                        </th>
                                         <td mat-cell *matCellDef="let compo">{{ compo.ponderacion }}%</td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="acciones">
-                                        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+                                        <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.ACCIONES" | translate }}</th>
                                         <td mat-cell *matCellDef="let compo">
-                                            <button mat-icon-button>
-                                                <mat-icon>edit</mat-icon>
+                                            <button mat-icon-button (click)="eliminarComponente(seccion, compo)">
+                                                <mat-icon>delete</mat-icon>
                                             </button>
-                                            <button mat-icon-button>
-                                                <mat-icon>lock</mat-icon>
-                                            </button>
-                                            <button mat-icon-button>
-                                                <mat-icon>visibility</mat-icon>
+                                            <button mat-icon-button (click)="agregarComponente()" class="add-btn">
+                                                <mat-icon>add</mat-icon>
                                             </button>
                                         </td>
                                     </ng-container>
@@ -132,7 +130,6 @@
                                     <tr mat-row *matRowDef="let row; columns: displayedColumnsComponente"></tr>
                                 </table>
 
-                                <!-- Botón para agregar componente si la tabla está vacía o al final de la tabla -->
                                 <div *ngIf="seccion.componentes.length === 0 || true">
                                     <button mat-icon-button (click)="prepararAgregarComponente(seccion)">
                                         <mat-icon>add</mat-icon>
@@ -145,48 +142,50 @@
                     <!-- Sección para agregar nuevo componente -->
                     <mat-card *ngIf="seccionSeleccionada">
                         <mat-card-header>
-                            <!-- El título dinámico para agregar componente según la sección -->
-                            <mat-card-title>Agregar componente a {{ seccionSeleccionada.titulo }}</mat-card-title>
+                            <mat-card-title>{{ "GLOBAL.AGREGAR" | translate }} pregunta a {{ seccionSeleccionada.titulo
+                                }}</mat-card-title>
                         </mat-card-header>
 
                         <mat-card-content>
                             <div class="form-container">
-                                <!-- Select de Tipo de Campo (TipoCampoId) -->
                                 <mat-form-field appearance="fill" class="form-field">
-                                    <mat-select placeholder="Seleccione tipo de respuesta"
+                                    <mat-select
+                                        placeholder="{{ 'definir_escalas.seleccionar_tipo_escala' | translate }}"
                                         [(value)]="tipoCampoSeleccionado" (selectionChange)="filtrarPorTipo()">
-                                        <mat-option *ngFor="let campo of tipoCampos" [value]="campo.TipoCampoId">
-                                            {{ campo.label }}
-                                        </mat-option>
+                                        <mat-option *ngFor="let campo of tipoCampos" [value]="campo.TipoCampoId">{{
+                                            campo.label }}</mat-option>
                                     </mat-select>
                                 </mat-form-field>
 
-                                <!-- Autocompletado de "Texto de la pregunta o acción" -->
                                 <mat-form-field appearance="fill" class="form-field">
-                                    <input matInput placeholder="Texto de la pregunta o acción"
+                                    <input matInput placeholder="{{ 'definir_escalas.tipo_input' | translate }}"
                                         [(ngModel)]="preguntaSeleccionada" [matAutocomplete]="auto">
                                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayNombre">
-                                        <mat-option *ngFor="let pregunta of preguntasFiltradas" [value]="pregunta">
-                                            {{ pregunta.Nombre }}
-                                        </mat-option>
+                                        <mat-option *ngFor="let pregunta of preguntasFiltradas" [value]="pregunta">{{
+                                            pregunta.Nombre }}</mat-option>
                                     </mat-autocomplete>
                                 </mat-form-field>
 
-                                <!-- Campo de porcentaje -->
                                 <mat-form-field class="form-field">
-                                    <input matInput placeholder="%" [(ngModel)]="nuevoPorcentaje">
+                                    <input matInput placeholder="%" type="number" [(ngModel)]="nuevoPorcentaje" min="1"
+                                        max="100" required (input)="validarPorcentaje()" />
+                                    <mat-error *ngIf="porcentajeInvalido">{{ "El porcentaje debe estar entre 1 y 100" |
+                                        translate }}</mat-error>
                                 </mat-form-field>
 
-                                <!-- Botón para añadir -->
                                 <button mat-icon-button (click)="agregarComponente()" class="add-btn">
                                     <mat-icon>add</mat-icon>
                                 </button>
                             </div>
                         </mat-card-content>
                     </mat-card>
-                    <!-- Botón de guardar debajo de las tablas dinámicas -->
+
+                    <!-- Botón de guardar -->
                     <div class="guardar-container">
-                        <button mat-raised-button color="primary" (click)="guardarFormulario()">Guardar</button>
+                        <button mat-raised-button color="primary" (click)="guardarFormulario()">
+                            <mat-icon>save</mat-icon>
+                            {{ "GLOBAL.GUARDAR" | translate }}
+                        </button>
                     </div>
                 </mat-card-content>
             </mat-card>
