--- a/src/app/components/definicion-plantillas/definicion-plantillas.component.html
+++ b/src/app/components/definicion-plantillas/definicion-plantillas.component.html
@@ -51,15 +51,9 @@
                     </button>
                 </th>
                 <td mat-cell *matCellDef="let form">
-                    <button mat-icon-button>
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                    <button mat-icon-button>
-                        <mat-icon>lock</mat-icon>
-                    </button>
-                    <button mat-icon-button>
-                        <mat-icon>visibility</mat-icon>
-                    </button>
+                    <button mat-icon-button><mat-icon>edit</mat-icon></button>
+                    <button mat-icon-button><mat-icon>lock</mat-icon></button>
+                    <button mat-icon-button><mat-icon>visibility</mat-icon></button>
                 </td>
             </ng-container>
 
@@ -97,35 +91,40 @@
                             </mat-card-header>
 
                             <mat-card-content>
-                                <table mat-table [dataSource]="seccion.componentes" class="full-width-table">
-                                    <ng-container matColumnDef="numero">
-                                        <th mat-header-cell *matHeaderCellDef>#</th>
-                                        <td mat-cell *matCellDef="let compo">{{ compo.numero }}</td>
-                                    </ng-container>
+                                <div cdkDropList [cdkDropListData]="seccion.componentes"
+                                    (cdkDropListDropped)="dropComponentes($event, seccion)">
+                                    <table mat-table [dataSource]="seccion.componentes" class="full-width-table">
+                                        <ng-container matColumnDef="numero">
+                                            <th mat-header-cell *matHeaderCellDef>#</th>
+                                            <td mat-cell *matCellDef="let compo">{{ compo.numero }}</td>
+                                        </ng-container>
 
-                                    <ng-container matColumnDef="nombre">
-                                        <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.LISTA" | translate }}</th>
-                                        <td mat-cell *matCellDef="let compo">{{ compo.nombre }}</td>
-                                    </ng-container>
+                                        <ng-container matColumnDef="nombre">
+                                            <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.LISTA" | translate }}</th>
+                                            <td mat-cell *matCellDef="let compo" cdkDrag>{{ compo.nombre }}</td>
+                                        </ng-container>
 
-                                    <ng-container matColumnDef="ponderacion">
-                                        <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.PONDERACION" | translate }}
-                                        </th>
-                                        <td mat-cell *matCellDef="let compo">{{ compo.ponderacion }}%</td>
-                                    </ng-container>
+                                        <ng-container matColumnDef="ponderacion">
+                                            <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.PONDERACION" | translate }}
+                                            </th>
+                                            <td mat-cell *matCellDef="let compo">{{ compo.ponderacion }}%</td>
+                                        </ng-container>
 
-                                    <ng-container matColumnDef="acciones">
-                                        <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.ACCIONES" | translate }}</th>
-                                        <td mat-cell *matCellDef="let compo">
-                                            <button mat-icon-button (click)="eliminarComponente(seccion, compo)">
-                                                <mat-icon>delete</mat-icon>
-                                            </button>
-                                        </td>
-                                    </ng-container>
+                                        <ng-container matColumnDef="acciones">
+                                            <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.ACCIONES" | translate }}
+                                            </th>
+                                            <td mat-cell *matCellDef="let compo">
+                                                <button mat-icon-button (click)="eliminarComponente(seccion, compo)">
+                                                    <mat-icon>delete</mat-icon>
+                                                </button>
+                                            </td>
+                                        </ng-container>
 
-                                    <tr mat-header-row *matHeaderRowDef="displayedColumnsComponente"></tr>
-                                    <tr mat-row *matRowDef="let row; columns: displayedColumnsComponente"></tr>
-                                </table>
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumnsComponente"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumnsComponente" cdkDrag>
+                                        </tr>
+                                    </table>
+                                </div>
 
                                 <div *ngIf="seccion.componentes.length === 0 || true">
                                     <button mat-icon-button (click)="prepararAgregarComponente(seccion)">
