--- a/src/app/components/definicion-plantillas/definicion-plantillas.component.html
+++ b/src/app/components/definicion-plantillas/definicion-plantillas.component.html
@@ -71,68 +71,83 @@
                 <mat-card-content>
                     <div class="form-container">
                         <mat-form-field appearance="fill">
-                            <input matInput placeholder="{{ 'titulo de sección' | translate }}"
+                            <input matInput placeholder="{{ 'definicion_plantillas.alert1' | translate }}"
                                 [(ngModel)]="tituloSeccion">
                         </mat-form-field>
+
+                        <!-- Alerta agregada justo debajo del input -->
+                        <div *ngIf="tituloSeccion.trim() === ''">
+                            <mat-card class="alert-card">
+                                <mat-card-content>
+                                    <mat-icon>error_outline</mat-icon>
+                                    {{ "definicion_plantillas.alert1" | translate }}
+                                </mat-card-content>
+                            </mat-card>
+                        </div>
 
                         <button mat-icon-button class="add-btn" (click)="agregarSeccion()">
                             <mat-icon>add</mat-icon>
                         </button>
                     </div>
 
-                    <!-- Tabla dinámica para secciones -->
-                    <div *ngFor="let seccion of secciones; let i = index">
-                        <mat-card>
-                            <mat-card-header>
-                                <mat-card-title>Sección: {{ seccion.titulo }}</mat-card-title>
-                                <button mat-icon-button (click)="eliminarSeccion(i)">
-                                    <mat-icon>delete</mat-icon>
-                                </button>
-                            </mat-card-header>
-
-                            <mat-card-content>
-                                <div cdkDropList [cdkDropListData]="seccion.componentes"
-                                    (cdkDropListDropped)="dropComponentes($event, seccion)">
-                                    <table mat-table [dataSource]="seccion.componentes" class="full-width-table">
-                                        <ng-container matColumnDef="numero">
-                                            <th mat-header-cell *matHeaderCellDef>#</th>
-                                            <td mat-cell *matCellDef="let compo">{{ compo.numero }}</td>
-                                        </ng-container>
-
-                                        <ng-container matColumnDef="nombre">
-                                            <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.LISTA" | translate }}</th>
-                                            <td mat-cell *matCellDef="let compo" cdkDrag>{{ compo.nombre }}</td>
-                                        </ng-container>
-
-                                        <ng-container matColumnDef="ponderacion">
-                                            <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.PONDERACION" | translate }}
-                                            </th>
-                                            <td mat-cell *matCellDef="let compo">{{ compo.ponderacion }}%</td>
-                                        </ng-container>
-
-                                        <ng-container matColumnDef="acciones">
-                                            <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.ACCIONES" | translate }}
-                                            </th>
-                                            <td mat-cell *matCellDef="let compo">
-                                                <button mat-icon-button (click)="eliminarComponente(seccion, compo)">
-                                                    <mat-icon>delete</mat-icon>
-                                                </button>
-                                            </td>
-                                        </ng-container>
-
-                                        <tr mat-header-row *matHeaderRowDef="displayedColumnsComponente"></tr>
-                                        <tr mat-row *matRowDef="let row; columns: displayedColumnsComponente" cdkDrag>
-                                        </tr>
-                                    </table>
-                                </div>
-
-                                <div *ngIf="seccion.componentes.length === 0 || true">
-                                    <button mat-icon-button (click)="prepararAgregarComponente(seccion)">
-                                        <mat-icon>add</mat-icon>
+                    <!-- Lista para las secciones, que permite arrastrar y soltar -->
+                    <div cdkDropList [cdkDropListData]="secciones" (cdkDropListDropped)="dropSecciones($event)">
+                        <div *ngFor="let seccion of secciones; let i = index" cdkDrag>
+                            <mat-card>
+                                <mat-card-header>
+                                    <mat-card-title>Sección: {{ seccion.titulo }}</mat-card-title>
+                                    <button mat-icon-button (click)="eliminarSeccion(i)">
+                                        <mat-icon>delete</mat-icon>
                                     </button>
-                                </div>
-                            </mat-card-content>
-                        </mat-card>
+                                </mat-card-header>
+
+                                <mat-card-content>
+                                    <!-- Lista de componentes en cada sección -->
+                                    <div cdkDropList [cdkDropListData]="seccion.componentes"
+                                        (cdkDropListDropped)="dropComponentes($event, seccion)">
+                                        <table mat-table [dataSource]="seccion.componentes" class="full-width-table">
+                                            <ng-container matColumnDef="numero">
+                                                <th mat-header-cell *matHeaderCellDef>#</th>
+                                                <td mat-cell *matCellDef="let compo">{{ compo.numero }}</td>
+                                            </ng-container>
+
+                                            <ng-container matColumnDef="nombre">
+                                                <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.LISTA" | translate }}
+                                                </th>
+                                                <td mat-cell *matCellDef="let compo" cdkDrag>{{ compo.nombre }}</td>
+                                            </ng-container>
+
+                                            <ng-container matColumnDef="ponderacion">
+                                                <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.PONDERACION" |
+                                                    translate }}</th>
+                                                <td mat-cell *matCellDef="let compo">{{ compo.ponderacion }}%</td>
+                                            </ng-container>
+
+                                            <ng-container matColumnDef="acciones">
+                                                <th mat-header-cell *matHeaderCellDef>{{ "GLOBAL.ACCIONES" | translate
+                                                    }}</th>
+                                                <td mat-cell *matCellDef="let compo">
+                                                    <button mat-icon-button
+                                                        (click)="eliminarComponente(seccion, compo)">
+                                                        <mat-icon>delete</mat-icon>
+                                                    </button>
+                                                </td>
+                                            </ng-container>
+
+                                            <tr mat-header-row *matHeaderRowDef="displayedColumnsComponente"></tr>
+                                            <tr mat-row *matRowDef="let row; columns: displayedColumnsComponente"
+                                                cdkDrag></tr>
+                                        </table>
+                                    </div>
+
+                                    <div *ngIf="seccion.componentes.length === 0 || true">
+                                        <button mat-icon-button (click)="prepararAgregarComponente(seccion)">
+                                            <mat-icon>add</mat-icon>
+                                        </button>
+                                    </div>
+                                </mat-card-content>
+                            </mat-card>
+                        </div>
                     </div>
 
                     <!-- Sección para agregar nuevo componente -->
