--- a/src/app/components/evaluaciones/evaluaciones.component.html
+++ b/src/app/components/evaluaciones/evaluaciones.component.html
@@ -138,7 +138,7 @@
                         </div>
                     </form>
                     <div *ngIf="!mostrarEvaluacion" style="width: 100%; display: flex; justify-content: center">
-                        <button mat-raised-button color="primary" (click)="consultar()">Consultar</button>
+                        <button mat-raised-button color="primary" (click)="continuar()">{{ 'GLOBAL.continuar' | translate }}</button>
                     </div>
 
                     <ngx-dynamic-form *ngIf="mostrarEvaluacion" [formtype]="'1'" [tercero]="tercero" [terceroEvaluado]="terceroEvaluado" [proyecto]="proyecto" [espacio]="espacio"></ngx-dynamic-form>
@@ -255,7 +255,7 @@
                         </div>
                     </form>
                     <div *ngIf="!mostrarEvaluacion" style="width: 100%; display: flex; justify-content: center">
-                        <button mat-raised-button color="primary" (click)="consultar()">Consultar</button>
+                        <button mat-raised-button color="primary" (click)="continuar()">{{ 'GLOBAL.continuar' | translate }}</button>
                     </div>
 
                     <ngx-dynamic-form *ngIf="mostrarEvaluacion" [formtype]="'2'" [tercero]="tercero" [terceroEvaluado]="terceroEvaluado" [proyecto]="proyecto" [espacio]="espacio"></ngx-dynamic-form>
@@ -373,7 +373,7 @@
                         </div>
                     </form>
                     <div *ngIf="!mostrarEvaluacion" style="width: 100%; display: flex; justify-content: center">
-                        <button mat-raised-button color="primary" (click)="consultar()">Consultar</button>
+                        <button mat-raised-button color="primary" (click)="continuar()">{{ 'GLOBAL.continuar' | translate }}</button>
                     </div>
 
                     <ngx-dynamic-form *ngIf="mostrarEvaluacion" [formtype]="'4'" [tercero]="tercero" [terceroEvaluado]="terceroEvaluado" [proyecto]="proyecto" [espacio]="espacio"></ngx-dynamic-form>
@@ -495,7 +495,7 @@
                         </div>
                     </form>
                     <div *ngIf="!mostrarEvaluacion" style="width: 100%; display: flex; justify-content: center">
-                        <button mat-raised-button color="primary" (click)="consultar()">Consultar</button>
+                        <button mat-raised-button color="primary" (click)="continuar()">{{ 'GLOBAL.continuar' | translate }}</button>
                     </div>
 
                     <ngx-dynamic-form *ngIf="mostrarEvaluacion" [formtype]="'3'" [tercero]="tercero" [terceroEvaluado]="terceroEvaluado" [proyecto]="proyecto" [espacio]="espacio"></ngx-dynamic-form>
@@ -597,7 +597,7 @@
                 </div>
             </form>
             <div *ngIf="!mostrarEvaluacion" style="width: 100%; display: flex; justify-content: center">
-                <button mat-raised-button color="primary" (click)="consultar()">Consultar</button>
+                <button mat-raised-button color="primary" (click)="continuar()">{{ 'GLOBAL.continuar' | translate }}</button>
             </div>
 
             <ngx-dynamic-form *ngIf="mostrarEvaluacion" [formtype]="'5'" [tercero]="tercero" [terceroEvaluado]="terceroEvaluado" [proyecto]="proyecto" [espacio]="espacio"></ngx-dynamic-form>
